<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:theme="@style/AppTheme">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/add_new_category"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="30sp"
        android:textStyle="bold"
        android:gravity="center_horizontal" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/enter_a_category_name"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:gravity="center_horizontal" />

    <EditText
        android:id="@+id/edt_category_name"
        style="@style/edt_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/enter_category"
        android:inputType="textPersonName"

         />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
      >

        <Button
            android:id="@+id/btn_category_save"
            style="@style/btn_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save"
            />

        <androidx.legacy.widget.Space
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp" />

        <Button
            android:id="@+id/btn_category_cancel"
            style="@style/btn_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
             />
    </LinearLayout>

</LinearLayout>