<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    android:orientation="vertical"
    tools:context=".AddNoteActivity">



    <EditText
        android:id="@+id/edt_note_title"
        style="@style/edt_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/note_title"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <TextView
        android:id="@+id/spinnerLabelTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Category"
        android:textColor="@color/colorBlack"
        />

    <Spinner
        android:id="@+id/spinner_category"
        style="@style/spinner_style"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"

        />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/LabelTvAddCategory"
            android:text="Add Category"
            android:textColor="@color/colorBlack"
            />

    <ImageButton
        android:id="@+id/imgb_add_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:padding="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        android:scaleType="fitCenter"
        app:srcCompat="@android:drawable/ic_input_add" />
    </LinearLayout>

    <EditText
        android:id="@+id/edt_note"
        style="@style/edt_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:gravity="top|center_vertical"
        android:hint="@string/note"
        android:inputType="textMultiLine"
     />

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:layout_marginTop="5dp"
    android:orientation="horizontal">
    <Button
        android:id="@+id/btn_save"
        style="@style/btn_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text= "@string/save"


        />

    <Button
        android:id="@+id/btn_cancel"
        style="@style/btn_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/cancel"
      />

</LinearLayout>

</LinearLayout>